[tool.poetry]
name = "neural-style-transfer"
version = "0.1.0"
description = ""
authors = ["Osman Zubair <5850274+okz12@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
torchvision = "^0.11.3"
matplotlib = "^3.5.1"
Pillow = "^9.0.1"
torch = "^1.10.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.1.0"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Black formatting
[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

# iSort
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
skip_gitignore = true
virtual_env = "venv"